<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/header_image"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="@string/drawer_visibility" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="@string/drawer_visibility" />

        <TextView
            android:id="@+id/textView_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/app_email"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="@string/drawer_visibility" />

    </LinearLayout>

</LinearLayout>