<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_checkpoint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.tool_store.Activities.CheckoutActivity">

    <ScrollView
        android:id="@+id/scrollView_Orders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="3sp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/lytContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_your_name"
                        android:inputType="textCapWords"
                        android:padding="7dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtAlamat"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/checkout_address"
                        android:inputType="textPostalAddress"
                        android:padding="7dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtKota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/checkout_city" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtProvinsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/checkout_province" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:entries="@array/shipping_array" />

                    <EditText
                        android:id="@+id/edtName2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/no_color"
                        android:editable="false"
                        android:ems="10"
                        android:inputType="text"
                        android:padding="7dp"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnDate"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/colorPrimary"
                        android:text="@string/checkout_set_date"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnTime"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/colorPrimary"
                        android:text="@string/checkout_set_time"
                        android:textColor="@color/white" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_phone_number"
                        android:inputType="phone"
                        android:padding="7dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <EditText
                    android:id="@+id/edtOrderList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"
                    android:gravity="top|left"
                    android:hint="@string/checkout_order_list"
                    android:inputType="textMultiLine"
                    android:padding="7dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/checkout_email"
                        android:inputType="textEmailAddress"
                        android:padding="7dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtComment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="top|left"
                        android:hint="@string/checkout_add_comment"
                        android:inputType="textMultiLine"
                        android:padding="7dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="?attr/colorPrimary"
                    android:text="@string/checkout_send_order"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textView_Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_order"
        android:textSize="@dimen/textSizeSmall"
        android:visibility="gone" />
</RelativeLayout>
